--- a/src/assets/style/RecoverPassword/recoverPassword.css
+++ b/src/assets/style/RecoverPassword/recoverPassword.css
@@ -1,4 +1,4 @@
-.mega-box{
+.mega-box {
     display: flex;
     align-items: center;
     width: 100%;
@@ -10,7 +10,7 @@
     background-color: transparent;
 }
 
-.square{
+.square {
     width: 100px;
     height: 100px;
     background: #3E9C27;
@@ -22,7 +22,7 @@
     position: absolute;
 }
 
-.square-2{
+.square-2 {
     width: 100px;
     height: 100px;
     background: #3E9C27;
@@ -33,7 +33,6 @@
     margin: 40% 15% 0 0;
     position: absolute;
 }
-
 
 .box-recover {
     display: flex;
@@ -60,7 +59,6 @@
 .box-recover form {
     font-family: Comfortaa;
     width: 60%;
-
 }
 
 .box-recover .box {
@@ -70,7 +68,7 @@
     padding-top: 10px;
 }
 
-.box-recover .box input{
+.box-recover .box input {
     height: 35px;
     width: 100%;
     border-width: 1px;
@@ -78,7 +76,7 @@
     border-radius: 5px;
 }
 
-.box-recover .btn{
+.box-recover .btn {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -86,7 +84,7 @@
     padding-top: 20px;
 }
 
-.box-recover .btn button{
+.box-recover .btn button {
     background: linear-gradient(90deg, #B6FFAA 2.02%, #8CDC79 91.57%);
     width: 80%;
     font-family: Patua One;
@@ -102,4 +100,59 @@
     font-size: 16px;
     color: white;
     border: none;
+}
+
+
+@media (max-width: 767px){
+    .mega-box {
+        display: flex;
+        align-items: center;
+        width: 100%;
+        height: 60vh;
+        z-index: 2;
+        top: 0px;
+        left: 0px;
+        position: relative;
+        background-color: transparent;
+    }
+
+    .box-recover .btn button{
+        width: 100%;
+    }
+
+    .box-recover .btn {
+        padding-top: 30px;
+    }
+
+    .mega-box form{
+        padding-top: 10px;
+    }
+
+    .mega-box .box-recover {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 40vh;
+        position: absolute;
+        background: white;
+        margin-left: 0;
+    }
+
+    .mega-box .box-recover .box {
+        padding-top: 30px;
+    }
+
+    .mega-box .box-recover h1{
+        font-family: Comfortaa;
+    }
+
+    .square {
+        display: none;
+    }
+
+    .square-2 {
+        display: none;
+    }
 }
