--- a/src/assets/style/Home/carrusel.css
+++ b/src/assets/style/Home/carrusel.css
@@ -1,16 +1,24 @@
 .container-padre {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    font-family: Comfortaa;
+    width: 40%;
     height: 100vh;
+    background: linear-gradient(180deg, #B6FFAA 0%, rgba(133, 248, 115, 0.55) 54.69%, rgba(255, 255, 255, 0.48) 100%);
+}
+
+.product{
+    top: 0;
+    padding: 10px 0 25px 0;
+    font-family: Comfortaa;
 }
 
 .container {
     position: relative;
-    width: 70%;
-    height: 80vh;
-    background-color: #f5f5f5;
-    box-shadow: 0 30px 50px #dbdbdb;
+    width: 80%;
+    height: 45vh;
+    background-color: transparent;
 }
 
 #slide {
@@ -32,6 +40,8 @@
 
 .item .text{
     text-align: left;
+    height: 100%;
+    font-family: Comfortaa;
 }
 
 .item:nth-child(1),
@@ -65,10 +75,9 @@
 .item .content {
     position: absolute;
     top: 50%;
-    left: 100px;
-    width: 300px;
+    left: 10%;
+    width: 100%;
     text-align: left;
-    padding: 0;
     color: white;
     transform: translate(0%, -50%);
     display: none;
@@ -81,14 +90,16 @@
 }
 
 .item .name {
-    font-size: 40px;
+    font-size: 25px;
     font-weight: bold;
+    text-align: center;
     opacity: 0;
     animation: showcontent 1s ease-in-out 1 forwards
 }
 
 .item .des {
     opacity: 0;
+    font-size: 15 px;
     animation: showcontent 1s ease-in-out 0.3s 1 forwards
 }
 
@@ -113,16 +124,46 @@
     }
 }
 
-
-
 .item .content .text-container{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 550px;
-    border: 1px red solid;
+    background-color: white;
+    width: 80%;
+    height: 50vh;
 }
 
+.item .content .text-container .text{
+    width: 30%;
+    align-items: center;
+    color: black;
+    padding-left: 10px;
+    height: 40vh;
+}
+
+.item .content .text-container-maquinaria{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    width: 80%;
+    height: 50vh;
+}
+
+.item .content .text-container-maquinaria .text{
+    width: 100%;
+    height: 10vh;
+    align-items: center;
+    justify-content: center;
+    color: black;
+}
+
+.item .content .text-container img{
+    height: 40vh;
+    width: 35%;
+    padding: 0 10px 0 20px;
+}
 
 .buttons {
     display: flex;
@@ -135,25 +176,18 @@
     width: 100%;
 }
 
-.buttons .atras{
-    padding-left: 20px;
-}
-
-.buttons .adelante{
-    padding-right: 20px;
-}
 
 .buttons button {
     width: 50px;
     height: 50px;
-    background-color: black;
+    background-color: transparent;
     border-radius: 50%;
     border: none;
     transition: 0.5s;
 }
 
 .buttons button:hover {
-    background-color: rgb(26, 186, 26);
+    cursor: pointer;
 }
 
 .buttons button img.arrow{
@@ -167,4 +201,112 @@
     margin: auto;
     height: 30px;
     transform: scaleX(-1);
+}
+
+.alazar{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+    padding-bottom: 30px;
+}
+
+.alazar .text-tele h1{
+    text-align: center;
+}
+
+.alazar .box .btn {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 15px 20px;
+    margin-top: 20px;
+    width: 200px;
+    position: relative;
+    border-radius: 30px;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    font-family: Comfortaa;
+    font-size: 16px;
+    color: white;
+    border: none;
+    background: linear-gradient(91deg, #71C55D 0%, #8CDC79 100%);
+}
+
+@media (max-width: 767px){
+    .container-padre{
+        width: 100%;
+        height: 50vh;
+        background: linear-gradient(180deg, #71C55D 0%, rgba(82, 255, 0, 0.20) 0.01%, #71C55D 100%);
+    }
+
+    .container-padre .product{
+        display: none;
+    }
+
+    .container-padre .container{
+        height: 65vh;
+    }
+
+    .container-padre .alazar{
+        display: none;
+    }
+
+    .item .content .text-container{
+        border-radius: 30px;
+        margin-top: 20px;
+        height: 35vh;
+    }
+
+    .item .content .text-container .text{
+        height: 29vh;
+    }
+
+    .item .content .text-container img{
+        height: 27vh;
+    }
+
+    .item .content .text-container-maquinaria{
+        border-radius: 30px;
+        margin-top: 20px;
+        height: 35vh;
+    }
+
+    .item .content .text-container-maquinaria .text{
+        height: 5vh;
+    }
+
+    .item:nth-child(1), .item:nth-child(2){
+        border-radius: 30px;
+        height: 73%;
+    }
+
+    .item:nth-child(3) {
+        border-radius: 30px;
+        left: 50%;
+    }
+    
+    .item:nth-child(4) {
+        border-radius: 30px;
+        left: calc(50% + 190px);
+    }
+    
+    .item:nth-child(5) {
+        border-radius: 30px;
+        left: calc(50% + 380px);
+    }
+    
+    .item:nth-child(n+6) {
+        border-radius: 30px;
+        left: calc(50% + 600px);
+        opacity: 0;
+    }
+
+    .buttons{
+        bottom: 58%;
+    }
+
 }
