--- a/src/assets/style/Landig/cards.css
+++ b/src/assets/style/Landig/cards.css
@@ -6,6 +6,7 @@
 }
 
 .cards h1{
+    text-align: center;
     font-family: Comfortaa;
     color: #FAA41B;
 }
@@ -16,14 +17,14 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 150vh;
+    height: auto;
     font-family: Comic Neue;
 }
 
 /* estilos carta 1 */
 
 .cards .content .card-1 {
-    width: 25%;
+    width: 350px;
     border-radius: 10px;
     height: 60vh;
     margin: 20px;
@@ -40,6 +41,10 @@
     width: 100%;
     height: 100%;
     border-collapse: collapse;
+}
+
+.cards .content .card-1 h3 {
+    text-align: center;
 }
 
 .cards .content .card-1 .info-card table td {
@@ -87,7 +92,7 @@
 /* estilos carta 2 */
 
 .cards .content .card-2 {
-    width: 25%;
+    width: 350px;
     border-radius: 10px;
     height: 60vh;
     margin: 20px;
@@ -152,7 +157,7 @@
 /* estilos carta 3 */
 
 .cards .content .card-3 {
-    width: 25%;
+    width: 350px;
     border-radius: 10px;
     height: 60vh;
     margin: 20px;
