--- a/src/assets/style/Login/login.css
+++ b/src/assets/style/Login/login.css
@@ -1,3 +1,11 @@
 .login{
     display: flex;
+    width: 100%;
+}
+
+@media (max-width: 767px){
+    .login{
+        display: flex;
+        flex-direction: column-reverse;
+    }
 }
