--- a/src/assets/style/RecoverPassword/backgorundRecover.css
+++ b/src/assets/style/RecoverPassword/backgorundRecover.css
@@ -6,7 +6,7 @@
     z-index: 1;
 }
 
-.background-retun .return{
+.background-retun .return {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -16,17 +16,17 @@
     z-index: 3;
 }
 
-.background-retun .return img{
+.background-retun .return img {
     height: 15vh;
     margin-top: 10px;
 }
 
-.background-retun .return .arrow img{
+.background-retun .return .arrow img {
     height: 7vh;
     margin: 0 0 5px 8px;
 }
 
-.background-retun .box-green{
+.background-retun .box-green {
     width: 100%;
     height: 100%;
     display: flex;
@@ -34,11 +34,49 @@
     align-items: center;
 }
 
-
-.background-retun .box-green .box-container{
+.background-retun .box-green .box-container {
     width: 80%;
     height: 95%;
     margin-right: 20px;
     border-radius: 20px;
     background-color: #71C55D;
+}
+
+.background-retun .box-green .box-container .text-box-right{
+    display: none;
+}
+
+
+@media (max-width: 767px) {
+    .background-retun .return {
+        display: none;
+    }
+
+    .background-retun {
+        height: 40vh;
+    }
+
+    .background-retun .box-green .box-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        margin-right: 0;
+        border-radius: 0;
+        background-color: #71C55D;
+    }
+
+    .background-retun .box-green .box-container .text-box-right{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 60%;
+        width: 50%;
+        border: 1px solid rgba(255, 255, 255, 0.08);
+        background: rgba(255, 255, 255, 0.08);
+        box-shadow: 4px 7px 15px 0px rgba(0, 0, 0, 0.08), 5px -5px 12px 0px rgba(255, 255, 255, 0.05) inset, -5px 5px 12px 0px rgba(255, 255, 255, 0.05) inset, -1px 4px 2px 0px rgba(201, 201, 201, 0.10) inset;
+        backdrop-filter: blur(75px);
+    }
 }
