--- a/src/assets/style/Register/formRegister.css
+++ b/src/assets/style/Register/formRegister.css
@@ -106,3 +106,39 @@
     font-size: 1.2rem;
     font-family: Raleway;
 }
+
+@media (max-width: 767px){
+    .right-box-register {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 80vh;
+    }
+
+    .right-box-register .content-register {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 60%;
+        height: 60vh;
+    }
+
+    .right-box-register .content-register h3 {
+        font-size: 18px;
+        color: #FAA41B;
+    }
+
+    .right-box-register .content-register img {
+        display: none;
+        height: 0;
+        width: 0;
+        padding-bottom: 0;
+    }
+
+    .right-box-register .content-register .links-text {
+        text-align: center;
+    }
+}
