--- a/src/assets/style/Register/register.css
+++ b/src/assets/style/Register/register.css
@@ -1,11 +1,10 @@
-.container-recover{
+.register{
+    display: flex;
     width: 100%;
-    height: 100vh;
-    position: relative;
 }
 
 @media (max-width: 767px){
-    .container-recover{
+    .register{
         display: flex;
         flex-direction: column;
     }
